--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,10 @@
+set-option -g default-terminal "screen-256color"
+set-option -g status-keys "emacs"
+set-option -g status-bg '#666666'
+set-option -g status-fg '#aaaaaa'
+set-option -g status-left-length 50
+set-option -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+
 unbind C-b
 set -g prefix C-s
 bind-key -r C-s send-prefix
