--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,3 +8,5 @@ set-option -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
 unbind C-b
 set -g prefix C-s
 bind-key -r C-s send-prefix
+
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
