[tmux] binding to split window

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,3 +10,6 @@ set -g prefix C-s
 bind-key -r C-s send-prefix
 
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+bind-key - split-window -v  -c '#{pane_current_path}'
+bind-key \ split-window -h  -c '#{pane_current_path}'
