--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,10 @@ bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key - split-window -v  -c '#{pane_current_path}'
 bind-key \ split-window -h  -c '#{pane_current_path}'
 
+bind c new-window -c "#{pane_current_path}"
+set -g base-index 1 # starts window numbering at 1
+set -g renumber-windows on # renumbers widows each time one is added/destroyed
+
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
