--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,6 +15,7 @@ bind-key - split-window -v  -c '#{pane_current_path}'
 bind-key \ split-window -h  -c '#{pane_current_path}'
 
 bind c new-window -c "#{pane_current_path}"
+bind-key b break-pane -d # breaks current pane out to new window
 set -g base-index 1 # starts window numbering at 1
 set -g renumber-windows on # renumbers widows each time one is added/destroyed
 
