--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,6 +19,8 @@ bind-key b break-pane -d # breaks current pane out to new window
 set -g base-index 1 # starts window numbering at 1
 set -g renumber-windows on # renumbers widows each time one is added/destroyed
 
+bind-key C-j choose-tree
+
 bind-key -n C-h select-pane -L
 bind-key -n C-j select-pane -D
 bind-key -n C-k select-pane -U
