--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -18,6 +18,8 @@ bind c new-window -c "#{pane_current_path}"
 bind-key b break-pane -d # breaks current pane out to new window
 set -g base-index 1 # starts window numbering at 1
 set -g renumber-windows on # renumbers widows each time one is added/destroyed
+# Prompted join-pane
+bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
 
 bind-key C-j choose-tree
 
@@ -48,3 +50,5 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind-key t split-window -h "vim ~/todo.md"
+
+
