--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,8 @@ set -g base-index 1 # starts window numbering at 1
 set -g renumber-windows on # renumbers widows each time one is added/destroyed
 # Prompted join-pane
 bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+# Easily swap a pane (targeted by pane number) with the current pane
+bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
 bind-key C-j choose-tree
 
