--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-shell /bin/zsh
 set-option -g default-terminal "screen-256color"
 set-option -g status-keys "emacs"
 set-option -g status-bg '#666666'
