--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,7 @@ set-option -g status-keys "emacs"
 set-option -g status-bg '#666666'
 set-option -g status-fg '#aaaaaa'
 set-option -g status-left-length 50
-set-option -g status-right " #(battery -t)  #(date '+%a, %b %d - %I:%M') "
+set-option -g status-right " #(battery -t)  #(date '+%a %d %b - %I:%M') "
 
 unbind C-b
 set -g prefix C-s
@@ -53,4 +53,3 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind-key t split-window -h "vim ~/todo.md"
-
