--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,7 @@ set-option -g status-bg '#666666'
 set-option -g status-fg '#aaaaaa'
 set-option -g status-left-length 50
 set-option -g status-right " #(battery -t)  #(date '+%a %d %b - %I:%M') "
+set-option -g allow-rename off
 
 unbind C-b
 set -g prefix C-s
