--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ set-option -g status-fg '#aaaaaa'
 set-option -g status-left-length 50
 set-option -g status-right " #(battery -t)  #(date '+%a %d %b - %I:%M') "
 set-option -g allow-rename off
+set-option -sg escape-time 10
 
 unbind C-b
 set -g prefix C-s
