--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ bind-key -r C-s send-prefix
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key \\ split-window -h  -c '#{pane_current_path}'
 
 bind c new-window -c "#{pane_current_path}"
 bind-key b break-pane -d # breaks current pane out to new window
@@ -48,11 +48,11 @@ bind -n C-Up resize-pane -U 5
 # Smart pane switching with awareness of Vim splits (vim-tmux-navigator)
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n 'C-h' if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n 'C-j' if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n 'C-k' if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n 'C-l' if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n 'C-\' if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 bind-key t split-window -h "vim ~/todo.md"
 
