--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ bind-key -r C-s send-prefix
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key '\' split-window -h  -c '#{pane_current_path}'
 
 bind c new-window -c "#{pane_current_path}"
 bind-key b break-pane -d # breaks current pane out to new window
