--- a/helix/languages.toml
+++ b/helix/languages.toml
@@ -15,6 +15,15 @@ indent = { tab-width = 2, unit = "  " }
 name = "ruby"
 source = { git = "https://github.com/tree-sitter/tree-sitter-ruby", rev = "4c600a463d97e36a0ca5ac57e11f3ac8c297a0fa" }
 
+[[auto-pairs]]
+'(' = ')'
+'{' = '}'
+'[' = ']'
+'"' = '"'
+'`' = '`'
+'<' = '>'
+'do' = 'end'
+
 # Javascript & Typescript
 
 [[language]]
