--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set-option -g default-shell /bin/zsh
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "alacritty"
 set-option -g status-keys "emacs"
 set-option -g status-bg '#666666'
 set-option -g status-fg '#aaaaaa'
@@ -7,6 +7,9 @@ set-option -g status-left-length 50
 set-option -g status-right " #(battery -t)  #(date '+%a %d %b - %I:%M') "
 set-option -g allow-rename off
 set-option -sg escape-time 10
+
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 unbind C-b
 set -g prefix C-s
