--- a/helix/config.toml
+++ b/helix/config.toml
@@ -3,7 +3,7 @@ theme = "my-nightfox"
 [editor]
 line-number = "relative"
 mouse = false
-# shell = ["zsh"]
+shell = ["zsh"]
 cursorline = true
 auto-completion = true
 auto-format = true
